[ref] Renamed FCLFilesController -> FCLScanViewController.

--- a/FCLScanViewController.xib
+++ b/FCLScanViewController.xib
@@ -1,11 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FCLFilesController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FCLScanViewController">
             <connections>
                 <outlet property="authView" destination="18d-Rg-1lO" id="xHk-uD-0Rb"/>
                 <outlet property="tableView" destination="3" id="4"/>
@@ -31,12 +35,12 @@
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Connexion à incwo.com" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Xfz-N4-beS">
                             <rect key="frame" x="100" y="121" width="160" height="19"/>
                             <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
-                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                             <color key="shadowColor" cocoaTouchSystemColor="darkTextColor"/>
                         </label>
                         <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" image="FCLFacileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="4Ww-S2-6NX">
-                            <rect key="frame" x="59" y="116" width="29" height="29"/>
+                            <rect key="frame" x="58" y="115" width="30" height="30"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58E-kk-F0z">
                             <rect key="frame" x="20" y="218" width="280" height="44"/>
@@ -45,8 +49,8 @@
                                 <constraint firstAttribute="width" constant="280" id="neL-lB-8ap"/>
                             </constraints>
                             <state key="normal" title="Connexion" backgroundImage="FCLButtonFrame">
-                                <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="signIn:" destination="-1" eventType="touchUpInside" id="blL-H7-2Kt"/>
@@ -59,15 +63,15 @@
                                 <constraint firstAttribute="height" constant="44" id="sXn-it-zUK"/>
                             </constraints>
                             <state key="normal" title="Créer un compte" backgroundImage="FCLButtonFrame">
-                                <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="signUp:" destination="-1" eventType="touchUpInside" id="L83-H6-W1L"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.18732063139999999" green="0.18732063139999999" blue="0.18732063139999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.18732063139999999" green="0.18732063139999999" blue="0.18732063139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="Xfz-N4-beS" firstAttribute="leading" secondItem="4Ww-S2-6NX" secondAttribute="trailing" constant="12" id="6fT-As-Ezw"/>
                         <constraint firstItem="58E-kk-F0z" firstAttribute="top" secondItem="Xfz-N4-beS" secondAttribute="bottom" constant="78" id="Knd-gY-7RF"/>
@@ -80,7 +84,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="3" firstAttribute="top" secondItem="12" secondAttribute="top" id="F0m-mH-CmP"/>
                 <constraint firstItem="18d-Rg-1lO" firstAttribute="leading" secondItem="12" secondAttribute="leading" id="IdS-SL-X8t"/>
@@ -96,12 +100,7 @@
         </view>
     </objects>
     <resources>
-        <image name="FCLButtonFrame" width="17" height="17"/>
-        <image name="FCLFacileLogo" width="29" height="29"/>
+        <image name="FCLButtonFrame" width="16" height="16"/>
+        <image name="FCLFacileLogo" width="30" height="30"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
