--- a/Classes/Login.storyboard
+++ b/Classes/Login.storyboard
@@ -73,12 +73,18 @@
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="email"/>
+                                                    <connections>
+                                                        <action selector="emailEditingChanged:" destination="vSA-rU-23M" eventType="editingChanged" id="KyA-YQ-ijs"/>
+                                                    </connections>
                                                 </textField>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mot de passe" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Czd-UH-3e1">
                                                     <rect key="frame" x="16" y="56" width="288" height="30"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
+                                                    <connections>
+                                                        <action selector="passwordEditingChanged:" destination="vSA-rU-23M" eventType="editingChanged" id="wxe-4y-t9M"/>
+                                                    </connections>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSx-ta-yMz">
                                                     <rect key="frame" x="114" y="112" width="92" height="30"/>
@@ -139,6 +145,7 @@
                     </tableView>
                     <connections>
                         <outlet property="emailTextField" destination="hjB-ms-2rd" id="PaM-Ge-djd"/>
+                        <outlet property="logInButton" destination="fSx-ta-yMz" id="s2Z-fr-6Wq"/>
                         <outlet property="passwordTextField" destination="Czd-UH-3e1" id="Via-gK-loG"/>
                     </connections>
                 </tableViewController>
