--- a/FCLScanViewController.xib
+++ b/FCLScanViewController.xib
@@ -11,33 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FCLScanViewController">
             <connections>
-                <outlet property="tableView" destination="3" id="4"/>
-                <outlet property="view" destination="12" id="13"/>
+                <outlet property="tableView" destination="3" id="umo-4C-rvn"/>
+                <outlet property="view" destination="3" id="fJR-h8-apV"/>
             </connections>
         </placeholder>
-        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="12">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+        <tableView clipsSubviews="YES" contentMode="scaleToFill" bouncesZoom="NO" style="grouped" rowHeight="60" sectionHeaderHeight="10" sectionFooterHeight="10" id="3">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bouncesZoom="NO" style="grouped" rowHeight="60" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="3">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="5"/>
-                        <outlet property="delegate" destination="-1" id="6"/>
-                    </connections>
-                </tableView>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="3" firstAttribute="top" secondItem="12" secondAttribute="top" id="F0m-mH-CmP"/>
-                <constraint firstItem="3" firstAttribute="leading" secondItem="12" secondAttribute="leading" id="Zmc-ZX-Cyn"/>
-                <constraint firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="k8J-dl-dKS"/>
-                <constraint firstAttribute="bottom" secondItem="3" secondAttribute="bottom" id="uqa-hh-18g"/>
-            </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-        </view>
+            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+            <connections>
+                <outlet property="dataSource" destination="-1" id="5"/>
+                <outlet property="delegate" destination="-1" id="6"/>
+            </connections>
+        </tableView>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
     </objects>
 </document>
