Added Close and Menu icons.

--- a/Classes/SidePanel.storyboard
+++ b/Classes/SidePanel.storyboard
@@ -63,7 +63,7 @@
                         <viewLayoutGuide key="safeArea" id="EgW-5p-phG"/>
                     </view>
                     <navigationItem key="navigationItem" id="LB7-zw-0Ue">
-                        <barButtonItem key="rightBarButtonItem" title="Fermer" style="plain" id="b0a-Wl-poZ">
+                        <barButtonItem key="rightBarButtonItem" image="Close" style="plain" id="b0a-Wl-poZ">
                             <connections>
                                 <action selector="close:" destination="Kex-TN-p1e" id="TKJ-Ih-hJq"/>
                             </connections>
@@ -216,4 +216,7 @@
             <point key="canvasLocation" x="788" y="264"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Close" width="15" height="15"/>
+    </resources>
 </document>
