--- a/Classes/FCLOfficeContentViewController.xib
+++ b/Classes/FCLOfficeContentViewController.xib
@@ -45,7 +45,7 @@
             <point key="canvasLocation" x="273.60000000000002" y="146.62668665667167"/>
         </view>
         <view opaque="NO" contentMode="scaleToFill" id="5" customClass="FCLNavigationItemTitleView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="153" height="40"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9" userLabel="Back Button">
@@ -83,7 +83,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="14" userLabel="Reload">
-                    <rect key="frame" x="98" y="0.0" width="40" height="40"/>
+                    <rect key="frame" x="108" y="0.0" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="kRP-4Q-wvL"/>
                     </constraints>
@@ -100,7 +100,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34" userLabel="Stop">
-                    <rect key="frame" x="98" y="0.0" width="40" height="40"/>
+                    <rect key="frame" x="108" y="0.0" width="40" height="40"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <state key="normal" image="FCLNavStop">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -113,23 +113,6 @@
                         <action selector="stopLoadingPage:" destination="-1" eventType="touchUpInside" id="38"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21" userLabel="Sign Out">
-                    <rect key="frame" x="275" y="0.0" width="40" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="40" id="rPh-BQ-AB5"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" image="FCLNavSignOut">
-                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <state key="highlighted">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="signOut:" destination="-1" eventType="touchUpInside" id="23"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -137,29 +120,25 @@
                 <constraint firstAttribute="bottom" secondItem="11" secondAttribute="bottom" id="6eJ-A9-fn9"/>
                 <constraint firstItem="34" firstAttribute="top" secondItem="14" secondAttribute="top" id="7A1-ak-LFC"/>
                 <constraint firstAttribute="bottom" secondItem="9" secondAttribute="bottom" id="Kmj-bT-v0H"/>
-                <constraint firstItem="14" firstAttribute="leading" secondItem="11" secondAttribute="trailing" constant="8" id="KoS-Bm-lON"/>
                 <constraint firstItem="11" firstAttribute="top" secondItem="5" secondAttribute="top" id="NiV-lg-UD7"/>
-                <constraint firstAttribute="bottom" secondItem="21" secondAttribute="bottom" id="Oaz-dH-PHu"/>
                 <constraint firstItem="9" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="5" id="Pn5-ES-INA"/>
                 <constraint firstItem="34" firstAttribute="bottom" secondItem="14" secondAttribute="bottom" id="RGX-im-Hkn"/>
                 <constraint firstItem="34" firstAttribute="leading" secondItem="14" secondAttribute="leading" id="XeX-gE-MOc"/>
                 <constraint firstAttribute="bottom" secondItem="14" secondAttribute="bottom" id="Zbq-6n-Bma"/>
                 <constraint firstItem="14" firstAttribute="top" secondItem="5" secondAttribute="top" id="iiO-Yv-W5R"/>
-                <constraint firstAttribute="trailing" secondItem="21" secondAttribute="trailing" constant="5" id="wYU-ba-udM"/>
-                <constraint firstItem="21" firstAttribute="top" secondItem="5" secondAttribute="top" id="waF-Bg-WdH"/>
+                <constraint firstAttribute="trailing" secondItem="14" secondAttribute="trailing" constant="5" id="jPr-dw-KSd"/>
                 <constraint firstItem="9" firstAttribute="top" secondItem="5" secondAttribute="top" id="wga-KJ-Lem"/>
                 <constraint firstItem="11" firstAttribute="leading" secondItem="9" secondAttribute="trailing" constant="5" id="xxD-DC-2ed"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="274" y="-130"/>
+            <point key="canvasLocation" x="140" y="-130.43478260869566"/>
         </view>
     </objects>
     <resources>
         <image name="FCLNavBack" width="30" height="30"/>
         <image name="FCLNavForward" width="30" height="30"/>
         <image name="FCLNavReload" width="30" height="30"/>
-        <image name="FCLNavSignOut" width="30" height="30"/>
         <image name="FCLNavStop" width="30" height="30"/>
     </resources>
 </document>
